--- a/portfolio.html
+++ b/portfolio.html
@@ -80,10 +80,10 @@
               <button type="button" class="catalog__btn">Маркетинг</button>
             </li>
           </ul>
-          <ul class="portfolio-container">
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="card">
+          <ul class="portfolio__list">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__card">
                   <img width="370" src="./images/portfolio img1.jpg" alt="" />
 
                   <div class="overlay">
@@ -95,16 +95,16 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-box">
-                  <h2 class="subtitle">Технокряк</h2>
-                  <p class="portfolio-content">Веб-сайт</p>
+                <div class="portfolio__box">
+                  <h2 class="portfolio__subtitle">Технокряк</h2>
+                  <p class="portfolio__content">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="card">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__card">
                   <img width="370" src="./images/portfolio img2.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
@@ -115,18 +115,18 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-box">
-                  <h2 class="subtitle">
+                <div class="portfolio__box">
+                  <h2 class="portfolio__subtitle">
                     Постер <span lang="en">Orlean vs Golden Star</span>
                   </h2>
-                  <p class="portfolio-content">Дизайн</p>
+                  <p class="portfolio__content">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="card">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__card">
                   <img width="370" src="./images/portfolio img3.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
@@ -137,18 +137,18 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-box">
-                  <h2 class="subtitle">
+                <div class="portfolio__box">
+                  <h2 class="portfolio__subtitle">
                     Ресторан <span lang="en">Seafood</span>
                   </h2>
-                  <p class="portfolio-content">Приложение</p>
+                  <p class="portfolio__content">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="card">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__card">
                   <img width="370" src="./images/portfolio img4.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
@@ -159,16 +159,16 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-box">
-                  <h2 class="subtitle">Проект <span lang="en">Prime</span></h2>
-                  <p class="portfolio-content">Маркетинг</p>
+                <div class="portfolio__box">
+                  <h2 class="portfolio__subtitle">Проект <span lang="en">Prime</span></h2>
+                  <p class="portfolio__content">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="card">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__card">
                   <img width="370" src="./images/portfolio img5.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
@@ -179,16 +179,16 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-box">
-                  <h2 class="subtitle">Проект <span lang="en">Boxes</span></h2>
-                  <p class="portfolio-content">Приложение</p>
+                <div class="portfolio__box">
+                  <h2 class="portfolio__subtitle">Проект <span lang="en">Boxes</span></h2>
+                  <p class="portfolio__content">Приложение</p>
                 </div>
               </a>
             </li>
 
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="card">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__card">
                   <img width="370" src="./images/portfolio img6.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
@@ -199,16 +199,16 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-box">
-                  <h2 class="subtitle" lang="en">Inspiration has no Borders</h2>
-                  <p class="portfolio-content">Веб-сайт</p>
+                <div class="portfolio__box">
+                  <h2 class="portfolio__subtitle" lang="en">Inspiration has no Borders</h2>
+                  <p class="portfolio__content">Веб-сайт</p>
                 </div>
               </a>
             </li>
 
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="card">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__card">
                   <img width="370" src="./images/portfolio img7.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
@@ -219,18 +219,18 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-box">
-                  <h2 class="subtitle">
+                <div class="portfolio__box">
+                  <h2 class="portfolio__subtitle">
                     Издание <span lang="en">Edition</span>
                   </h2>
-                  <p class="portfolio-content">Дизайн</p>
+                  <p class="portfolio__content">Дизайн</p>
                 </div>
               </a>
             </li>
 
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="card">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__card">
                   <img width="370" src="./images/portfolio img8.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
@@ -241,16 +241,16 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-box">
-                  <h2 class="subtitle">Проект <span lang="en">LAB</span></h2>
-                  <p class="portfolio-content">Маркетинг</p>
+                <div class="portfolio__box">
+                  <h2 class="portfolio__subtitle">Проект <span lang="en">LAB</span></h2>
+                  <p class="portfolio__content">Маркетинг</p>
                 </div>
               </a>
             </li>
 
-            <li class="portfolio-item">
-              <a href="" class="portfolio-link">
-                <div class="card">
+            <li class="portfolio__item">
+              <a href="" class="portfolio__link">
+                <div class="portfolio__card">
                   <img width="370" src="./images/portfolio img9.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
@@ -261,9 +261,9 @@
                     </p>
                   </div>
                 </div>
-                <div class="portfolio-box">
-                  <h2 class="subtitle" lang="en">Growing Business</h2>
-                  <p class="portfolio-content">Приложение</p>
+                <div class="portfolio__box">
+                  <h2 class="portfolio__subtitle" lang="en">Growing Business</h2>
+                  <p class="portfolio__content">Приложение</p>
                 </div>
               </a>
             </li>
