--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!--hero-->
       <section class="hero">
         <div class="container">
-          <h1 class="title hero__title">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
           <button type="button" class="hero__btn" data-modal-open>
             Заказать услугу
           </button>
