--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </section>
       <!--work-->
-      <section class="work section">
+      <section class="work-section">
         <div class="container">
           <h2 class="title work__title">Чем мы занимаемся</h2>
           <ul class="work__list">
