--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
             <li class="portfolio__item">
               <a href="" class="portfolio__link">
                 <div class="portfolio__card">
-                  <img width="370" src="./images/portfolio img1.jpg" alt="" />
+                  <img width="370" src="./images/portfolio-img1.jpg" alt="" />
 
                   <div class="overlay">
                     <p class="portfolio-text">
@@ -105,7 +105,7 @@
             <li class="portfolio__item">
               <a href="" class="portfolio__link">
                 <div class="portfolio__card">
-                  <img width="370" src="./images/portfolio img2.jpg" alt="" />
+                  <img width="370" src="./images/portfolio-img2.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -127,7 +127,7 @@
             <li class="portfolio__item">
               <a href="" class="portfolio__link">
                 <div class="portfolio__card">
-                  <img width="370" src="./images/portfolio img3.jpg" alt="" />
+                  <img width="370" src="./images/portfolio-img3.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -149,7 +149,7 @@
             <li class="portfolio__item">
               <a href="" class="portfolio__link">
                 <div class="portfolio__card">
-                  <img width="370" src="./images/portfolio img4.jpg" alt="" />
+                  <img width="370" src="./images/portfolio-img4.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -169,7 +169,7 @@
             <li class="portfolio__item">
               <a href="" class="portfolio__link">
                 <div class="portfolio__card">
-                  <img width="370" src="./images/portfolio img5.jpg" alt="" />
+                  <img width="370" src="./images/portfolio-img5.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -189,7 +189,7 @@
             <li class="portfolio__item">
               <a href="" class="portfolio__link">
                 <div class="portfolio__card">
-                  <img width="370" src="./images/portfolio img6.jpg" alt="" />
+                  <img width="370" src="./images/portfolio-img6.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -209,7 +209,7 @@
             <li class="portfolio__item">
               <a href="" class="portfolio__link">
                 <div class="portfolio__card">
-                  <img width="370" src="./images/portfolio img7.jpg" alt="" />
+                  <img width="370" src="./images/portfolio-img7.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -231,7 +231,7 @@
             <li class="portfolio__item">
               <a href="" class="portfolio__link">
                 <div class="portfolio__card">
-                  <img width="370" src="./images/portfolio img8.jpg" alt="" />
+                  <img width="370" src="./images/portfolio-img8.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
                       Ресурс предлагает комплексные предложения с разным уровнем
@@ -251,7 +251,7 @@
             <li class="portfolio__item">
               <a href="" class="portfolio__link">
                 <div class="portfolio__card">
-                  <img width="370" src="./images/portfolio img9.jpg" alt="" />
+                  <img width="370" src="./images/portfolio-img9.jpg" alt="" />
                   <div class="overlay">
                     <p class="portfolio-text">
                       Ресурс предлагает комплексные предложения с разным уровнем
